# adventofcode

./: .dayseventeen.py.swn  .dayseventeen.py.swo  .dayten.py.swp  .gitignore  .gitmodules  dayeight.py  dayeleven.py  dayfive.py  dayfour.py  dayfourteen.py  daynine.py  dayone.py  dayseven.py  dayseventeen.py  daysix.py  daysixteen.py  dayten.py  daythirteen.py  daythree.py  daytwelve.py  daytwo.py  intcode.py
2015/: CMakeLists.txt  main.cpp  utils.hpp
2016/: a.out  day1.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  day9.py
2016/aoc/src/: main.rs
2019/: dayeleven.py  dayfifteen.py  daynine.py  dayseventeen.py  daysix.py  daythirteen.py  daythree.py  intcode.py
2020/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py
2020/compiler/: CMakeLists.txt
2020/compiler/parser/: main.cpp  parser.hpp
2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day18_v2.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
2023/: day1.py
2024/: day1.py
2025/: .gitignore  a.out  day1.f90  day2.f90  day3.f90  day4.f90  day5.f90  run.sh  utils.f90  utils.mod
